rest of js language

--- a/08Angular/javascript/index.html
+++ b/08Angular/javascript/index.html
@@ -8,7 +8,9 @@
   <!-- <script src="1-script.js"></script> -->
   <!-- <script src="2-data-types.js"></script> -->
   <!-- <script src="3-scopes.js"></script> -->
-  <script src="4-type-conversion.js"></script>
+  <!-- <script src="4-type-conversion.js"></script> -->
+  <!-- <script src="5-objects.js"></script> -->
+  <script src="6-functions.js"></script>
 </head>
 <body>
 
